--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,12 @@
     <string name="dtxtmoneda">Finally, if heads click it to see and say the question to everybody. If tails, click it to end the round. Nobody else will know the question.</string>
     <string name="dbtnmoneda">See coin !</string>
     <string name="quit">Exit from app ?</string>
+    <string name="moneda">Do you want to flip a real coin or see the random coin of the app ?</string>
+    <string name="propia">I will use a real coin</string>
+    <string name="interna">Show me the coin</string>
+    <string name="cara">heads</string>
+    <string name="creu">tails</string>
+    <string name="valorMoneda">Heads or tails ?</string>
+    <string name="dtxtmonedapropia">Finally, if heads click ‘HEADS’ to see and say the question to everybody. If tails, click ‘TAILS’ to end the round. Nobody else will know the question.</string>
+    <string name="dbtnacabar">Finish round</string>
 </resources>
