--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Juego de la moneda</string>
-    <string name="txtinicial">Bienvenidos al juego de la moneda. Este juego consiste en hacer una pregunta a uno de los jugadores, los dos elegidos con una ruleta. La pregunta solo la sabrán las dos personas en juego. El otro jugador contestará esta pregunta en voz alta. Después, se tirá una moneda, si sale cara se dirá la pregunta. En caso de que sea cruz, la ronda se terminará.</string>
+    <string name="txtinicial">Bienvenidos al juego de la moneda. Este juego consiste en hacer una pregunta a uno de los jugadores, los dos elegidos con una ruleta. La pregunta solo la sabrán las dos personas en juego. El otro jugador contestará esta pregunta en voz alta. Después, se tirará una moneda, si sale cara se dirá la pregunta. En caso de que sea cruz, la ronda se terminará.</string>
     <string name="titleinicial">El juego de la moneda</string>
     <string name="btninicial">Siguiente</string>
     <string name="dmaintxt">Mostrar diálogos sobre como jugar</string>
     <string name="dsi">sí</string>
     <string name="dno">no</string>
     <string name="dtitleruleta">Ruleta</string>
-    <string name="dtxtruleta">Bueno, empieza el juego. Aquí tendreis que elegir a dos jugadores mediante la ruleta. La primera persona se encargará de hacer la pregunta y la segunda, la contestarà. ¡ Haz girar la ruleta !</string>
+    <string name="dtxtruleta">Bueno, empieza el juego. Aquí tendréis que elegir a dos jugadores mediante la ruleta. La primera persona se encargará de hacer la pregunta y la segunda, la contestará. ¡ Haz girar la ruleta !</string>
     <string name="dbtnruleta">¡ Seguimos !</string>
     <string name="btngirar">Girar</string>
     <string name="btnparar">Parar</string>
     <string name="preg">Pregunta</string>
-    <string name="dtxtpregunta">Ya tenemos a los dos jugadores… El primer seleccionado que esciba una pregunta para el segundo y pulse ‘enviar’. ¡ La pregunta, por el momento, sólo la puede ver quien la escribe !</string>
+    <string name="dtxtpregunta">Ya tenemos a los dos jugadores… El primer seleccionado que esciba una pregunta para el segundo y pulse ‘enviar’. ¡ La pregunta, por el momento, sólo la puede ver quién la escribe !</string>
     <string name="dbtnenviar">Enviar</string>
     <string name="dtitlecontestacio">Contestación</string>
     <string name="dtxtcontestacio">Pasad el móvil al segundo jugador…</string>
-    <string name="dtxtcontestacio2">A continuación, lee la pregunta pulsando en ‘VER LA PREGUNTA’ i contestala en voz alta. La pregunta continuará siendo secreta. Cuando acabes lanza la moneda para develar o no la pregunta.</string>
+    <string name="dtxtcontestacio2">A continuación, lee la pregunta pulsando en ‘VER LA PREGUNTA’ y contéstala en voz alta. La pregunta continuará siendo secreta. Cuando termines lanza la moneda para desvelar o no la pregunta.</string>
     <string name="btncontestacio">Ver la pregunta</string>
     <string name="btnllançar">Lanzar la moneda</string>
     <string name="dtitlemoneda">Moneda</string>
@@ -30,6 +30,6 @@
     <string name="cara">cara</string>
     <string name="creu">cruz</string>
     <string name="valorMoneda">¿ Cara o cruz ?</string>
-    <string name="dtxtmonedapropia">Por último, si ha salido cara, pulsa ‘CARA’ para ver i decir la pregunta a todos. En caso de cruz, pulsa ‘CRUZ’ para acabar la ronda. Nadie más sabrá la pregunta.</string>
+    <string name="dtxtmonedapropia">Por último, si ha salido cara, pulsa ‘CARA’ para ver y decir la pregunta a todos. En caso de cruz, pulsa ‘CRUZ’ para acabar la ronda. Nadie más sabrá la pregunta.</string>
     <string name="dbtnacabar">Terminar ronda</string>
 </resources>
