--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,4 +32,5 @@
     <string name="valorMoneda">Heads or tails ?</string>
     <string name="dtxtmonedapropia">Finally, if heads click ‘HEADS’ to see and say the question to everybody. If tails, the round has been finished.</string>
     <string name="dbtnacabar">Finish round</string>
+    <string name="dbtnvore">See question</string>
 </resources>
